# cphus

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: scraper.yml
data/: listings.parquet  map.geojson
src/cphus/: crawl.py  crawl_firecrawl.py  crawl_gemini.py  crud.py  discord.py
src/cphus/core/config/: logging.py  settings.py
