[project]
name = "cphus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "discord-py>=2.6.4",
    "firecrawl>=4.8.0",
    "geopandas>=1.1.1",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "polars>=1.35.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "shapely>=2.1.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
]

ignore = [
    "E501", # line-too-long
    "T201",  # Print Statement
]

[tool.ruff.format]
docstring-code-format = true
